Z-index error resolved

--- a/about/about.css
+++ b/about/about.css
@@ -40,6 +40,7 @@ body{
     float: right;
     /* background-color: #fdfdfd; */
     padding: 8%;
+    
 }
 
 .inner-container h1{
@@ -82,7 +83,7 @@ body{
 
 @media screen and (max-width:600px){
     .about-section{
-        padding: 0;
+        padding: 5%;
     }
     .inner-container{
         padding: 60px;
