--- a/navbar/nav.css
+++ b/navbar/nav.css
@@ -14,10 +14,10 @@ nav {
   justify-content: space-around;
   align-items: center;
   height: 10vh;
-  background-color: #4f007c;
+  background-color: #7100b3;
   /* background-color: #210233; */
   /* background-image: linear-gradient(#210233 , #350053 ); */
-  z-index: -100;
+  z-index: 10;
 }
 
 nav .logo {
@@ -32,6 +32,7 @@ nav .menu {
   justify-content: space-around;
   width: 60%;
   list-style: none;
+  z-index: 10;
 }
 
 nav .menu a {
@@ -40,6 +41,7 @@ nav .menu a {
   letter-spacing: 1px;
   font-weight: bold;
   font-size: 14px;
+  z-index: 10;
 }
 
 nav #toggleBtn {
@@ -64,6 +66,7 @@ nav #toggleBtn div {
 @media screen and (max-width: 768px) {
   body {
     overflow-x: hidden;
+    overflow-y: hidden;
   }
 
   nav .menu {
@@ -72,7 +75,7 @@ nav #toggleBtn div {
     right: 0px;
     width: 100%;
     height: 90vh;
-    background-color: #560088;
+    background-color: #4b0077;
     display: flex;
     flex-direction: column;
     align-items: center;
